OpenVidu ready beta 1.9.0 (Safari support)

--- a/openvidu-server/docker/openvidu-server-kms/Dockerfile
+++ b/openvidu-server/docker/openvidu-server-kms/Dockerfile
@@ -2,20 +2,19 @@ FROM ubuntu:16.04
 MAINTAINER openvidu@gmail.com
 
 # Install Kurento Media Server (KMS) 
-RUN	echo "deb http://ubuntu.kurento.org xenial kms6" | tee /etc/apt/sources.list.d/kurento.list \
-	&& apt-key adv --keyserver keyserver.ubuntu.com --recv 2F819BC0 \
+RUN echo "deb http://ubuntu.openvidu.io/6.7.0 xenial kms6" | tee /etc/apt/sources.list.d/kurento.list \
+	&& apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 5AFA7A83 \
 	&& apt-get update \
 	&& apt-get -y dist-upgrade \
-	&& apt-get -y install kurento-media-server-6.0 \
-    && rm -rf /var/lib/apt/lists/*
+	&& apt-get -y install kurento-media-server
 
 COPY kms.sh /kms.sh
 
 # Install Java
-RUN apt-get update && apt-get install -y openjdk-8-jdk && rm -rf /var/lib/apt/lists/*
+RUN apt-get install -y openjdk-8-jdk
 
 # Install supervisor
-RUN apt-get update && apt-get install -y supervisor && rm -rf /var/lib/apt/lists/*
+RUN apt-get install -y supervisor && rm -rf /var/lib/apt/lists/*
 
 # Configure supervisor
 RUN mkdir -p /var/log/supervisor
