--- a/openvidu-test/pom.xml
+++ b/openvidu-test/pom.xml
@@ -5,13 +5,14 @@
 	<parent>
 		<groupId>io.openvidu</groupId>
 		<artifactId>openvidu-parent</artifactId>
-		<version>1.1.0</version>
+		<version>1.9.0-beta-1</version>
 	</parent>
 
 	<artifactId>openvidu-test</artifactId>
 	<packaging>jar</packaging>
 
 	<name>OpenVidu Test</name>
+	<version>1.1.0</version>
 	<description>
 			OpenVidu Tests Framework
 
