--- a/openvidu-test-e2e/docker/Dockerfile
+++ b/openvidu-test-e2e/docker/Dockerfile
@@ -9,11 +9,12 @@ RUN apt-get update && apt-get -y upgrade
 RUN apt-get install -y software-properties-common && apt-get install -y --no-install-recommends apt-utils
 
 # Install Kurento Media Server (KMS)
-RUN	echo "deb http://ubuntu.kurento.org xenial kms6" | tee /etc/apt/sources.list.d/kurento.list \
-	&& apt-key adv --keyserver keyserver.ubuntu.com --recv 2F819BC0 \
+RUN echo "deb http://ubuntu.openvidu.io/6.7.0 xenial kms6" | tee /etc/apt/sources.list.d/kurento.list \
+	&& apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 5AFA7A83 \
 	&& apt-get update \
 	&& apt-get -y dist-upgrade \
-	&& apt-get -y install kurento-media-server-6.0
+	&& apt-get -y install kurento-media-server \
+	&& apt-get -y install openh264-gst-plugins-bad-1.5
 
 # Install Node
 RUN apt-get update && apt-get install -y curl
