--- a/openvidu-browser/package.json
+++ b/openvidu-browser/package.json
@@ -32,5 +32,5 @@
         "updatetsc": "cd ts/OpenViduInternal && tsc && cd ../OpenVidu && tsc && cd ../.. && tsc --declaration ts/OpenVidu/index.ts --outDir lib --sourceMap --lib dom,es5,es2015.promise,scripthost && tsc --declaration ts/OpenVidu/Main.ts --outDir lib --sourceMap --lib dom,es5,es2015.promise,scripthost"
     }, 
     "types": "lib/OpenVidu/index.d.ts", 
-    "version": "1.8.0"
+    "version": "1.9.0-beta-1"
 }
