--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -2,13 +2,13 @@ server.address: 0.0.0.0
 server.ssl.enabled: true
 openvidu.recording.version: 1.8.0
 server.port: 8443
-server.ssl.key-store: classpath:cbx_cert.jks
+server.ssl.key-store: /home/openvidu_certs/councilbox.jks
 server.ssl.key-store-password: C0uncilbox@2016
 server.ssl.key-store-type: JKS
-server.ssl.key-alias: cbx_cert
+server.ssl.key-alias: councilbox
 kms.uris=[\"ws://localhost:8888/kurento\"]
 openvidu.secret: YOUR_SECRET
-openvidu.publicurl: local
+openvidu.publicurl: https://172.18.2.18:8443
 openvidu.cdr: false
 openvidu.recording: false
 openvidu.recording.path: /home/recordings
