--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.ssl.key-store: /home/openvidu_certs/councilbox.jks
 server.ssl.key-store-password: C0uncilbox@2016
 server.ssl.key-store-type: JKS
 server.ssl.key-alias: councilbox
+
+#kms.uris=[\"ws://217.182.136.130:8888/kurento\"]
 kms.uris=[\"ws://localhost:8888/kurento\"]
 openvidu.secret: YOUR_SECRET
 openvidu.publicurl: https://172.18.2.18:8443
