--- a/openvidu-server/docker/openvidu-server-kms/supervisord.conf
+++ b/openvidu-server/docker/openvidu-server-kms/supervisord.conf
@@ -9,5 +9,5 @@ command=/bin/bash /kms.sh
 redirect_stderr=true
 
 [program:openvidu-server]
-command=/bin/bash -c "java -jar -Dopenvidu.publicurl=docker-local /openvidu-server.jar"
+command=/bin/bash -c "java -jar -Dspring.profiles.active=docker /openvidu-server.jar"
 redirect_stderr=true
