--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -16,4 +16,5 @@ openvidu.publicurl: local
 openvidu.cdr: false
 openvidu.recording: false
 openvidu.recording.path: /opt/openvidu/recordings
-openvidu.recording.free-access: false
+openvidu.recording.public-access: false
+openvidu.recording.notification: publisher_moderator
