--- a/openvidu-node-client/package.json
+++ b/openvidu-node-client/package.json
@@ -11,13 +11,16 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "docs": "typedoc --options ./config/typedoc.js --out ./docs ./src"
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "9.4.0",
-    "ts-node": "4.1.0",
+    "@types/node": "9.6.6",
+    "ts-node": "6.0.0",
     "tslint": "5.9.1",
-    "typescript": "2.6.2"
+    "typedoc": "^0.11.1",
+    "typedoc-plugin-sourcefile-url": "^1.0.3",
+    "typescript": "2.7.2"
   }
 }
