--- a/openvidu-java-client/pom.xml
+++ b/openvidu-java-client/pom.xml
@@ -97,9 +97,9 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.10.4</version>
+						<version>3.0.0</version>
 						<configuration>
-
+							<show>public</show>
 						</configuration>
 					</plugin>
 				</plugins>
@@ -131,7 +131,10 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.10.4</version>
+						<version>3.0.0</version>
+						<configuration>
+							<show>public</show>
+						</configuration>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
@@ -161,10 +164,10 @@
 						<version>1.6.8</version>
 						<extensions>true</extensions>
 						<configuration>
-        						<serverId>ossrh</serverId>
-        						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-        						<autoReleaseAfterClose>true</autoReleaseAfterClose>
-      						</configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
 					</plugin>
 					<plugin>
 						<artifactId>maven-resources-plugin</artifactId>
