--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -1,6 +1,6 @@
 node {
-  docker.image('elastestbrowsers/chrome:latest').withRun('-p 4444:4444 -p 5900:5900 --cap-add=SYS_ADMIN --shm-size=1g') { c ->
-    docker.image('elastestbrowsers/firefox:latest').withRun('-p 4445:4444 -p 5901:5900 --cap-add=SYS_ADMIN --shm-size=1g') { d ->
+  docker.image('selenium/standalone-chrome-debug:latest').withRun('-p 4444:4444 -p 5900:5900 --shm-size=1g') { c ->
+    docker.image('elastest/eus-browser-firefox:3.7.1').withRun('-p 4445:4444 -p 5901:5900 --shm-size=1g') { d ->
       def mycontainer = docker.image('openvidu/openvidu-test-e2e:latest')
       mycontainer.pull()
       mycontainer.inside("-p 4200:4200 -p 4443:4443 -u root -v /var/run/docker.sock:/var/run/docker.sock:rw -v /dev/shm:/dev/shm") {
