openvidu-node-client tsconfig.json updated (exclude)

--- a/openvidu-node-client/tsconfig.json
+++ b/openvidu-node-client/tsconfig.json
@@ -17,5 +17,11 @@
       "es2016",
       "dom"
     ]
-  }
+  },
+  "exclude": [
+    "config",
+    "docs",
+    "lib",
+    "node_modules"
+  ]
 }
