--- a/openvidu-browser/package.json
+++ b/openvidu-browser/package.json
@@ -16,9 +16,10 @@
     "updatetsc": "cd src/OpenVidu && tsc && cd ../.. && tsc --declaration src/index.ts --outDir ./lib --sourceMap --lib dom,es5,es2015.promise,scripthost",
     "docs": "grunt --gruntfile config/typedoc/custom-theme/gruntfile.js && typedoc --options ./config/typedoc/typedoc.js --out ./docs ./src && rm -rf ../../openvidu.io/api/openvidu-browser/* && cp -R ./docs/. ../../openvidu.io/api/openvidu-browser"
   },
-  "types": "lib/OpenVidu/index.d.ts",
+  "types": "lib/index.d.ts",
   "dependencies": {
     "@types/platform": "^1.3.1",
+    "@types/node": "^9.6.7",
     "freeice": "2.2.0",
     "hark": "1.2.0",
     "inherits": "2.0.3",
@@ -36,7 +37,7 @@
     "tslint": "^5.9.1",
     "typedoc": "^0.11.1",
     "typedoc-plugin-sourcefile-url": "^1.0.3",
-    "typescript": "2.7.2",
+    "typescript": "2.8.3",
     "uglify-js": "3.3.20",
     "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.4",
