--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -12,7 +12,7 @@ node {
           sh 'cd openvidu && mvn -DskipTests=true install'
         }
         stage('OpenVidu Browser build') {
-          sh 'cd openvidu/openvidu-browser && npm install --unsafe-perm && npm run updatetsc && npm link'
+          sh 'cd openvidu/openvidu-browser && npm install --unsafe-perm && npm run build && npm link'
         }
         stage('OpenVidu Node Client build') {
           sh 'cd openvidu/openvidu-node-client && npm install --unsafe-perm && npm run build && npm link'
