--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -14,3 +14,4 @@ openvidu.recording: false
 openvidu.recording.path: /home/recordings
 openvidu.recording.public-access: false
 openvidu.recording.notification: publisher_moderator
+openvidu.recording.custom-layout: /opt/openvidu/custom-layout
