--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -15,7 +15,7 @@
         "colormap": "^2.2.0", 
         "core-js": "^2.4.1", 
         "hammerjs": "^2.0.8", 
-        "openvidu-browser": "1.9.0-beta-1", 
+        "openvidu-browser": "2.0.0", 
         "openvidu-node-client": "1.8.0", 
         "rxjs": "^5.4.2", 
         "zone.js": "^0.8.14"
@@ -52,5 +52,5 @@
         "start": "ng serve", 
         "test": "ng test"
     }, 
-    "version": "1.9.0-beta-1"
+    "version": "2.0.0"
 }
