--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -1,56 +1,56 @@
 {
     "dependencies": {
-        "@angular/animations": "^4.4.3", 
-        "@angular/cdk": "^2.0.0-beta.11", 
-        "@angular/common": "^4.2.4", 
-        "@angular/compiler": "^4.2.4", 
-        "@angular/core": "^4.2.4", 
-        "@angular/flex-layout": "2.0.0-beta.9", 
-        "@angular/forms": "^4.2.4", 
-        "@angular/http": "^4.2.4", 
-        "@angular/material": "^2.0.0-beta.11", 
-        "@angular/platform-browser": "^4.2.4", 
-        "@angular/platform-browser-dynamic": "^4.2.4", 
-        "@angular/router": "^4.2.4", 
-        "colormap": "^2.2.0", 
-        "core-js": "^2.4.1", 
-        "hammerjs": "^2.0.8", 
-        "openvidu-browser": "2.0.0", 
-        "openvidu-node-client": "2.0.0", 
-        "rxjs": "^5.4.2", 
-        "zone.js": "^0.8.14"
-    }, 
+        "@angular/animations": "5.2.10",
+        "@angular/cdk": "5.2.5",
+        "@angular/common": "5.2.10",
+        "@angular/compiler": "5.2.10",
+        "@angular/core": "5.2.10",
+        "@angular/flex-layout": "5.0.0-beta.14",
+        "@angular/forms": "5.2.10",
+        "@angular/http": "5.2.10",
+        "@angular/material": "5.2.5",
+        "@angular/platform-browser": "5.2.10",
+        "@angular/platform-browser-dynamic": "5.2.10",
+        "@angular/router": "5.2.10",
+        "colormap": "^2.2.0",
+        "core-js": "^2.4.1",
+        "hammerjs": "^2.0.8",
+        "openvidu-browser": "2.0.0",
+        "openvidu-node-client": "2.0.0",
+        "rxjs": "5.5.9",
+        "zone.js": "0.8.26"
+    },
     "devDependencies": {
-        "@angular/cli": "1.4.3", 
-        "@angular/compiler-cli": "^4.2.4", 
-        "@angular/language-service": "^4.2.4", 
-        "@types/jasmine": "~2.5.53", 
-        "@types/jasminewd2": "~2.0.2", 
-        "@types/node": "~6.0.60", 
-        "codelyzer": "~3.1.1", 
-        "jasmine-core": "~2.6.2", 
-        "jasmine-spec-reporter": "~4.1.0", 
-        "karma": "1.7.1", 
-        "karma-chrome-launcher": "2.2.0", 
-        "karma-cli": "~1.0.1", 
-        "karma-coverage-istanbul-reporter": "^1.3.0", 
-        "karma-jasmine": "~1.1.0", 
-        "karma-jasmine-html-reporter": "^0.2.2", 
-        "protractor": "~5.1.2", 
-        "ts-node": "~3.2.0", 
-        "tslint": "~5.3.2", 
-        "typescript": "2.5.3"
-    }, 
-    "license": "Apache-2.0", 
-    "name": "openvidu-testapp", 
-    "private": true, 
+        "@angular/cli": "1.7.4",
+        "@angular/compiler-cli": "5.2.10",
+        "@angular/language-service": "5.2.10",
+        "@types/jasmine": "2.8.7",
+        "@types/jasminewd2": "2.0.3",
+        "@types/node": "10.0.8",
+        "codelyzer": "4.3.0",
+        "jasmine-core": "3.1.0",
+        "jasmine-spec-reporter": "4.2.1",
+        "karma": "2.0.2",
+        "karma-chrome-launcher": "2.2.0",
+        "karma-cli": "1.0.1",
+        "karma-coverage-istanbul-reporter": "1.4.2",
+        "karma-jasmine": "1.1.2",
+        "karma-jasmine-html-reporter": "1.1.0",
+        "protractor": "5.3.2",
+        "ts-node": "6.0.3",
+        "tslint": "5.10.0",
+        "typescript": "2.7.2"
+    },
+    "license": "Apache-2.0",
+    "name": "openvidu-testapp",
+    "private": true,
     "scripts": {
-        "build": "ng build", 
-        "e2e": "ng e2e", 
-        "lint": "ng lint", 
-        "ng": "ng", 
-        "start": "ng serve", 
+        "build": "ng build",
+        "e2e": "ng e2e",
+        "lint": "ng lint",
+        "ng": "ng",
+        "start": "ng serve",
         "test": "ng test"
-    }, 
+    },
     "version": "2.0.0"
 }
