--- a/openvidu-browser/package.json
+++ b/openvidu-browser/package.json
@@ -9,29 +9,29 @@
         "merge": "1.2.0",
         "platform": "^1.3.5",
         "sdp-translator": "0.1.24",
-        "ua-parser-js": "0.7.17",
+        "ua-parser-js": "0.7.18",
         "uuid": "3.2.1",
-        "webrtc-adapter": "6.1.4",
+        "webrtc-adapter": "6.1.5",
         "wolfy87-eventemitter": "5.2.4"
     },
     "description": "OpenVidu Browser",
     "devDependencies": {
         "browserify": "16.1.1",
-        "grunt": "^1.0.1",
-        "grunt-autoprefixer": "^3.0.4",
-        "grunt-cli": "^1.2.0",
-        "grunt-contrib-copy": "^1.0.0",
-        "grunt-contrib-sass": "^1.0.0",
-        "grunt-contrib-uglify": "^2.3.0",
-        "grunt-contrib-watch": "~1.0.0",
-        "grunt-string-replace": "^1.0.0",
-        "grunt-ts": "^5.5.1",
+        "grunt": "1.0.2",
+        "grunt-autoprefixer": "3.0.4",
+        "grunt-cli": "1.2.0",
+        "grunt-contrib-copy": "1.0.0",
+        "grunt-contrib-sass": "1.0.0",
+        "grunt-contrib-uglify": "3.3.0",
+        "grunt-contrib-watch": "1.1.0",
+        "grunt-string-replace": "1.3.1",
+        "grunt-ts": "6.0.0-beta.19",
         "tsify": "4.0.0",
-        "tslint": "^5.9.1",
-        "typedoc": "^0.11.1",
-        "typedoc-plugin-sourcefile-url": "^1.0.3",
+        "tslint": "5.10.0",
+        "typedoc": "0.11.1",
+        "typedoc-plugin-sourcefile-url": "1.0.3",
         "typescript": "2.8.3",
-        "uglify-js": "3.3.20"
+        "uglify-js": "3.3.25"
     },
     "license": "Apache-2.0",
     "main": "lib/index.js",
