--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -8,8 +8,8 @@ node('container') {
         stage('Preparation') {
           sh 'rm -rf openvidu || true'
           sh 'rm -rf /opt/openvidu/recordings/* || true'
-          sh 'chmod 777 /.npm || true'
           sh 'git clone https://github.com/OpenVidu/openvidu.git'
+          sh 'mkdir /.npm && chmod -R 777 /.npm || true'
         }
         stage('OpenVidu parent build') {
           sh 'cd openvidu && mvn -DskipTests=true install'
