--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -6,13 +6,13 @@ node('container') {
       def USER_ID = sh script: 'id -u $USER', returnStdout: true
       mycontainer.inside("-p 4200:4200 -p 4443:4443 -e MY_UID=" + USER_ID + " -v /var/run/docker.sock:/var/run/docker.sock:rw -v /dev/shm:/dev/shm -v /opt/openvidu/recordings:/opt/openvidu/recordings") {
         withEnv([
-          'npm_config_cache=npm-cache',
           'HOME=.'
         ]) {
           stage('Preparation') {
             sh 'rm -rf openvidu || true'
             sh 'rm -rf /opt/openvidu/recordings/* || true'
             sh 'git clone https://github.com/OpenVidu/openvidu.git'
+            sh 'mkdir ~/.npm-global && npm config set prefix "~/.npm-global" && echo "export PATH=~/.npm-global/bin:\$PATH" >> ~/.profile && source ~/.profile'
           }
           stage('OpenVidu parent build') {
             sh 'cd openvidu && mvn -DskipTests=true install'
