--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -12,13 +12,13 @@ node('container') {
             sh 'rm -rf openvidu || true'
             sh 'rm -rf /opt/openvidu/recordings/* || true'
             sh 'git clone https://github.com/OpenVidu/openvidu.git'
-            sh 'mkdir ~/.npm-global && npm config set prefix "~/.npm-global" && echo "export PATH=~/.npm-global/bin:\$PATH" >> ~/.profile && source ~/.profile'
+            sh 'mkdir ~/.npm-global && npm config set prefix "~/.npm-global" && echo "export PATH=~/.npm-global/bin:\$PATH" >> ~/.profile && source ~/.profile || true'
           }
           stage('OpenVidu parent build') {
             sh 'echo "cd openvidu && mvn -DskipTests=true install"'
           }
           stage('OpenVidu Browser build') {
-            sh 'mkdir ~/.npm-global && npm config set prefix "~/.npm-global" && echo "export PATH=~/.npm-global/bin:\$PATH" >> ~/.profile && source ~/.profile'
+            sh 'mkdir ~/.npm-global && npm config set prefix "~/.npm-global" && echo "export PATH=~/.npm-global/bin:\$PATH" >> ~/.profile && source ~/.profile || true'
             sh 'cd openvidu/openvidu-browser && npm install --unsafe-perm && npm run build && npm link'
           }
           stage('OpenVidu Node Client build') {
