--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -14,13 +14,13 @@ node('container') {
             sh 'rm -rf ~/.npm-global || true'
             sh 'rm -rf ~/.profile || true'
             sh 'git clone https://github.com/OpenVidu/openvidu.git'
-            sh 'mkdir ~/.npm-global && npm config set prefix "~/.npm-global" && echo "export PATH=~/.npm-global/bin:\$PATH" >> ~/.profile && source ~/.profile || true'
+            sh 'mkdir ~/.npm-global && echo "export PATH=~/.npm-global/bin:\$PATH" >> ~/.profile || true'
           }
           stage('OpenVidu parent build') {
             sh 'echo "cd openvidu && mvn -DskipTests=true install"'
           }
           stage('OpenVidu Browser build') {
-            sh 'mkdir ~/.npm-global && npm config set prefix "~/.npm-global" && echo "export PATH=~/.npm-global/bin:\$PATH" >> ~/.profile && source ~/.profile || true'
+            sh 'npm config set prefix "~/.npm-global" && source ~/.profile || true'
             sh 'cd openvidu/openvidu-browser && npm install --unsafe-perm && npm run build && npm link'
           }
           stage('OpenVidu Node Client build') {
