openvidu-server recording layout updated to use StreamManager API

--- a/openvidu-server/docker/openvidu-recording/Dockerfile
+++ b/openvidu-server/docker/openvidu-recording/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER openvidu@gmail.com
 # Install Chrome
 RUN apt-get update && apt-get install -y wget
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
-  echo "deb http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list && \
+  echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | tee /etc/apt/sources.list.d/google-chrome.list && \
   apt-get update && apt-get install -y google-chrome-stable
 
 # Install media packages
@@ -25,4 +25,3 @@ RUN ["chmod", "+x", "/entrypoint.sh"]
 RUN mkdir /recordings
 
 ENTRYPOINT /entrypoint.sh
-
