openvidu-testapp to Angular 6

--- a/openvidu-testapp/docker/supervisord.conf
+++ b/openvidu-testapp/docker/supervisord.conf
@@ -9,5 +9,5 @@ command=/bin/bash /kms.sh
 redirect_stderr=true
 
 [program:openvidu-server]
-command=/bin/bash -c "java -Dserver.port=4443 -Dsecurity.ignored=/** -Dspring.resources.static-locations=file:///web/ -jar /openvidu-server.jar"
+command=/bin/bash -c "java -Dserver.port=4443 -Dsecurity.ignored=/** -Dspring.resources.static-locations=file:///web/ -Dopenvidu.recording=true -Dopenvidu.recording.path=/opt/openvidu/recordings -Dopenvidu.recording.public-access=true -jar /openvidu-server.jar"
 redirect_stderr=true
