--- a/openvidu-testapp/docker/supervisord.conf
+++ b/openvidu-testapp/docker/supervisord.conf
@@ -8,6 +8,10 @@ loglevel=debug
 command=/bin/bash /kms.sh
 redirect_stderr=true
 
+[program:testapp]
+command=/bin/bash -c "http-server -S -C /web/cert.pem -K /web/key.pem -p 5000 /web"
+redirect_stderr=true
+
 [program:openvidu-server]
-command=/bin/bash -c "java -Dserver.port=4443 -Dsecurity.ignored=/** -Dspring.resources.static-locations=file:///web/ -Dopenvidu.recording=true -Dopenvidu.recording.path=/opt/openvidu/recordings -Dopenvidu.recording.public-access=true -jar /openvidu-server.jar"
+command=/bin/bash -c "java -Dserver.port=4443 -Dsecurity.ignored=/** -Dopenvidu.recording=true -Dopenvidu.recording.path=/opt/openvidu/recordings -Dopenvidu.recording.public-access=true -Dserver.ssl.key-store=/web/NEW.jks -Dserver.ssl.key-store-password=CERT_PASS -Dserver.ssl.key-alias=CERT_ALIAS -jar /openvidu-server.jar"
 redirect_stderr=true
