openvidu-test-e2e Docker images updated: node 8, KMS 6.7.2

--- a/openvidu-test-e2e/docker/Dockerfile
+++ b/openvidu-test-e2e/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:16.04
 
-MAINTAINER openvidu@gmail.com
+LABEL maintainer="openvidu@gmail.com"
 
 USER root
 
@@ -9,7 +9,7 @@ RUN apt-get update && apt-get -y upgrade
 RUN apt-get install -y software-properties-common && apt-get install -y --no-install-recommends apt-utils
 
 # Install Kurento Media Server (KMS)
-RUN echo "deb http://ubuntu.openvidu.io/6.7.0 xenial kms6" | tee /etc/apt/sources.list.d/kurento.list \
+RUN echo "deb http://ubuntu.openvidu.io/6.7.2 xenial kms6" | tee /etc/apt/sources.list.d/kurento.list \
 	&& apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 5AFA7A83 \
 	&& apt-get update \
 	&& apt-get -y dist-upgrade \
@@ -18,7 +18,7 @@ RUN echo "deb http://ubuntu.openvidu.io/6.7.0 xenial kms6" | tee /etc/apt/source
 
 # Install Node
 RUN apt-get update && apt-get install -y curl
-RUN curl -sL https://deb.nodesource.com/setup_6.x | bash - && apt-get install -y nodejs
+RUN curl -sL https://deb.nodesource.com/setup_8.x | bash - && apt-get install -y nodejs
 
 # Java
 RUN apt-get install -y default-jdk
@@ -35,14 +35,8 @@ RUN npm install -g @angular/cli
 # http-server
 RUN npm install -g http-server
 
-# npm
+# typescript
 RUN npm install -g typescript
-
-# Docker
-#RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-#RUN add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-#RUN apt-get update
-#RUN apt-get -y install docker-ce
 
 # sudo
 RUN apt-get -y install sudo
@@ -53,13 +47,5 @@ RUN apt-get autoremove --purge -y
 
 COPY entrypoint.sh /entrypoint.sh
 RUN ["chmod", "+x", "/entrypoint.sh"]
-
-# Jenkins user
-#RUN useradd -ms /bin/bash jenkins &&\
-#    echo "jenkins:jenkins" | chpasswd
-#RUN usermod -aG docker jenkins
-#ENV WORKSPACE /home/jenkins
-#USER jenkins
-#WORKDIR ${WORKSPACE}
 
 ENTRYPOINT ["/entrypoint.sh"]
