--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -9,7 +9,6 @@ server.ssl.key-store: classpath:openvidu-selfsigned.jks
 server.ssl.key-store-password: openvidu
 server.ssl.key-store-type: JKS
 server.ssl.key-alias: openvidu-selfsigned
-kms.uris=[\"ws://localhost:8888/kurento\"]
 
 openvidu.secret: MY_SECRET
 openvidu.publicurl: local
@@ -19,3 +18,7 @@ openvidu.recording.path: /opt/openvidu/recordings
 openvidu.recording.public-access: false
 openvidu.recording.notification: publisher_moderator
 openvidu.recording.custom-layout: /opt/openvidu/custom-layout
+
+kms.uris=[\"ws://localhost:8888/kurento\"]
+
+coturn.sqlite=/opt/openvidu/coturn/turndb
