--- a/openvidu-browser/package.json
+++ b/openvidu-browser/package.json
@@ -5,7 +5,7 @@
         "@types/platform": "1.3.1",
         "freeice": "2.2.0",
         "hark": "1.2.0",
-        "platform": "^1.3.5",
+        "platform": "1.3.5",
         "uuid": "3.2.1",
         "webrtc-adapter": "6.2.1",
         "wolfy87-eventemitter": "5.2.4"
