openvidu-server: Redis turn DB

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -21,4 +21,7 @@ openvidu.recording.custom-layout: /opt/openvidu/custom-layout
 
 kms.uris=[\"ws://localhost:8888/kurento\"]
 
-coturn.sqlite=/opt/openvidu/coturn/turndb
+coturn.redis.ip=127.0.0.1
+coturn.redis.dbname=0
+coturn.redis.password=turn
+coturn.redis.connect-timeout=30
