--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -13,15 +13,21 @@ server.ssl.key-alias: openvidu-selfsigned
 openvidu.secret: MY_SECRET
 openvidu.publicurl: local
 openvidu.cdr: false
+
 openvidu.recording: false
 openvidu.recording.path: /opt/openvidu/recordings
 openvidu.recording.public-access: false
 openvidu.recording.notification: publisher_moderator
 openvidu.recording.custom-layout: /opt/openvidu/custom-layout
 
-kms.uris=[\"ws://localhost:8888/kurento\"]
+openvidu.streams.video.max-recv-bandwidth: 600
+openvidu.streams.video.min-recv-bandwidth: 300
+openvidu.streams.video.max-send-bandwidth: 600
+openvidu.streams.video.min-send-bandwidth: 300
 
-coturn.redis.ip=127.0.0.1
-coturn.redis.dbname=0
-coturn.redis.password=turn
-coturn.redis.connect-timeout=30
+kms.uris: [\"ws://localhost:8888/kurento\"]
+
+coturn.redis.ip: 127.0.0.1
+coturn.redis.dbname: 0
+coturn.redis.password: turn
+coturn.redis.connect-timeout: 30
