--- a/openvidu-java-client/pom.xml
+++ b/openvidu-java-client/pom.xml
@@ -84,6 +84,12 @@
 			<version>${version.json-simple}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+
 	</dependencies>
 
 	<profiles>
